# small_room

./: .gitignore  control_box.py  led_strip.py  main.py  presence_detector.py  readme.md  requirements.txt
cpp/: CMakeLists.txt
cpp/src/: control_box.cpp  control_box.hpp  main.cpp  presence_detector.cpp  presence_detector.hpp  sysfs_pwm.cpp  sysfs_pwm.hpp  timer.hpp
cpp/src/templates/: index.html
python/: requirements.txt
python/src/: control_box.py  main.py  presence_detector.py
python/src/templates/: index.html
src/python/: main.py  presence_detector.py  requirements.txt
templates/: index.html
